trying horizontal window css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+/* @media (min-width: 610px) {
+  
+   .wrapper {
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    padding: 12px;
+    overflow: scroll;
+  }
+  sp-action-group {
+    padding: 12px;
+  }
+  sp-label {
+    display: none;
+  }
+} */
+
+
 body {
     color: white;
     padding: 0 16px;
